# swe-agent-eval-lab

./: README.md  pyproject.toml
.github/workflows/: ci.yml
eval_lab/: __init__.py  __main__.py  models.py  runner.py  tasks.py
tasks/fastapi-contract-migration/: failure_analysis.md  grader.py  prompt.md
tasks/fastapi-contract-migration/starter/: README.md  app.py  requirements.txt
tasks/fastapi-contract-migration/tests/hidden/: test_api_hidden.py
tasks/fastapi-contract-migration/tests/visible/: test_api_visible.py
tasks/ipc-finalization-atomicity/: failure_analysis.md  grader.py  prompt.md
tasks/ipc-finalization-atomicity/starter/: db.py  ipc.py  schema.sql
tasks/ipc-finalization-atomicity/starter/tests/: test_placeholder.py
tasks/ipc-finalization-atomicity/tests/hidden/: test_ipc_hidden.py
tasks/ipc-finalization-atomicity/tests/visible/: test_ipc_visible.py
tasks/react-approval-persistence/: failure_analysis.md  grader.py  prompt.md
tasks/react-approval-persistence/starter/: index.html  package.json  vite.config.ts
tasks/react-approval-persistence/starter/src/: App.tsx
tasks/react-approval-persistence/tests/hidden/: test_approval_hidden.test.tsx
tasks/react-approval-persistence/tests/visible/: test_approval_visible.test.tsx
tasks/sample_reverse_string/: failure_analysis.md  grader.py  prompt.md
tasks/sample_reverse_string/starter/sample_reverse_string/: core.py
tasks/sample_reverse_string/tests/hidden/: test_reverse_hidden.py
tasks/sample_reverse_string/tests/visible/: test_reverse_visible.py
